# flutter-native-interop-playground

./: .gitignore  LICENSE  analysis_options.yaml  ffigen.yaml  pubspec.yaml  readme.md
.github/workflows/: ci.yaml
android/: build.gradle  consumer-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/org/maplibre/android/: BuildConfig.java  MapLibre.java
android/src/main/kotlin/com/kekland/flmln/: FlMlnPlugin.kt
example/lib/: main.dart
ios/: flmln.podspec
ios/flmbgl/: Package.swift
ios/flmbgl/.swiftpm/xcode/xcuserdata/kekland.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/flmbgl/Sources/flmbgl/: FlMbglDarwinPluginGlobals.swift  FlMbglFlutterTexture.swift  FlMbglMetalFlutterTexture.swift  FlMbglPluginIOS.swift
lib/: flmbgl.dart  flmln.dart
lib/src/: map.dart
lib/src/classes/: map_options.dart
lib/src/style/: extensions.dart  layer.dart  property.dart  style.dart
lib/src/widgets/: flmln_renderer.dart  flutter_map_flmln.dart
macos/: flmln.podspec
src/: BUILD.bazel  CMakeLists.txt  CMakeLists_old.txt
src/android/: AndroidManifest.xml
src/src/: flmbgl.cpp  flmln.cpp  flmln.h  flmln_ffi_gen.h
src/src/flmbgl/: flutter_texture_interface.cpp  flutter_texture_interface.hpp  map_observer.hpp  renderer_backend.cpp  renderer_backend.hpp  renderer_frontend.hpp
src/src/flmbgl/mtl/: renderer_backend.hpp
src/src/flmbgl/platform/darwin/: flutter_texture_interface.hpp
src/src/flmln/gl/: renderer_backend.cpp  renderer_backend.hpp
src/src/flmln/mtl/: renderer_backend.cpp
src/src/flmln/platform/android/: flutter_texture_interface.cpp  flutter_texture_interface.hpp  platform.cpp
src/src/flmln/platform/darwin/: ffi.cpp  flmln_darwin_stub.c  flutter_texture_interface.cpp  flutter_texture_interface.hpp
src/src/flmln/vulkan/: renderer_backend.cpp
src/src/wrappers/: tile_server_options.cpp  tile_server_options.h
tool/: _build_libraries_bazel_old.py  build_libraries.py  build_libraries_xd.py  clean_build.py  ffigen.dart  ffigen.py  generate_cpp_ffi.py
tool/cpp_ffi/: parser.py
tool/style/: configuration.dart  utils.dart
tool/style/generators/: dart_generator.dart
