load("//bazel:flags.bzl", "CPP_FLAGS", "MAPLIBRE_FLAGS")
load("@rules_apple//apple:apple.bzl", "apple_xcframework")

# --- Common ---

FLMBGL_SRCS = glob(["src/**/*.cpp"])
FLMBGL_HDRS = glob(["src/**/*.h", "src/**/*.hpp"])
FLMBGL_PUBLIC_HDRS = glob(["src/**/*.h"])
FLMBGL_FLAGS = ['-fobjc-arc']

cc_library(
    name = "flmbgl_srcs",
    deps = [
        "//platform/default:mbgl-default",
        "//:mbgl-core",
    ],
    srcs = FLMBGL_SRCS,
    hdrs = FLMBGL_HDRS,
    # TODO: separate flags per platform
    copts = CPP_FLAGS + MAPLIBRE_FLAGS + FLMBGL_FLAGS + ["-DFLMBGL_MACOS=1", "-DFLMBGL_MTL=1"],
    visibility = ["//visibility:private"],
)

# --- Android ---

# ... TODO

# --- iOS ---

objc_library(
    name = "flmbgl_ios",
    deps = [
        "//platform/default:mbgl-default",
        "//platform:ios-sdk",
        ":flmbgl_srcs",
    ],
    hdrs = FLMBGL_HDRS,
    linkopts = [
        "-L/opt/homebrew/opt/icu4c/lib",
        "-undefined", "dynamic_lookup",
        "-force_load", "$(location :flmbgl_srcs)",
    ],
    visibility = ["//visibility:public"],
)

apple_xcframework(
    name = "flmbgl_ios_xcframework",
    deps = [":flmbgl_ios"],
    bundle_id = "com.kekland.flmbgl",
    infoplists = ["src/Info.plist"],
    public_hdrs = FLMBGL_PUBLIC_HDRS,
    minimum_os_versions = {"ios": "12.0"},
    ios = {
        "simulator": ["x86_64", "arm64"],
        "device": ["arm64"],
    },
    visibility = ["//visibility:public"],
)

# --- macOS ---

objc_library(
    name = "flmbgl_macos",
    deps = [
        "//platform/default:mbgl-default",
        "//platform:macos-objcpp",
        ":flmbgl_srcs",
    ],
    hdrs = FLMBGL_PUBLIC_HDRS,
    linkopts = [
        "-L/opt/homebrew/opt/icu4c/lib",
        "-undefined", "dynamic_lookup",
        "-force_load", "$(location :flmbgl_srcs)",
    ],
    visibility = ["//visibility:public"],
)

apple_xcframework(
    name = "flmbgl_macos_xcframework",
    deps = [":flmbgl_macos"],
    bundle_id = "com.kekland.flmbgl",
    infoplists = ["src/Info.plist"],
    public_hdrs = FLMBGL_PUBLIC_HDRS,
    minimum_os_versions = {"macos": "10.15"},
    macos = ["x86_64", "arm64"],
    visibility = ["//visibility:public"],
)

# Linux

# ... TODO

# Windows

# ... TODO
